Add more test cases